--- a/api_docs/fast_transformers/clustering/index.html
+++ b/api_docs/fast_transformers/clustering/index.html
@@ -17,7 +17,7 @@
 <main>
 <article id="content">
 <header>
-<h1 class="title">Namespace <code>fast_transformers.clustering</code></h1>
+<h1 class="title">Module <code>fast_transformers.clustering</code></h1>
 </header>
 <section id="section-intro">
 </section>
