--- a/api_docs/fast_transformers/recurrent/index.html
+++ b/api_docs/fast_transformers/recurrent/index.html
@@ -40,7 +40,7 @@
 <dt><code class="name"><a title="fast_transformers.recurrent.attention" href="attention/index.html">fast_transformers.recurrent.attention</a></code></dt>
 <dd>
 <section class="desc"><p>Implementations of different types of autoregressive attention
-mechanisms.</p></section>
+mechanisms for self attention and cross attention.</p></section>
 </dd>
 <dt><code class="name"><a title="fast_transformers.recurrent.transformers" href="transformers.html">fast_transformers.recurrent.transformers</a></code></dt>
 <dd>
